# test-fast-api

./: .gitignore  main.py  pyproject.toml
app/database/: mongo.py
app/models/: base.py  broadcast.py
app/types/: item.py  messages.py
config/: gunicorn_conf.py  settings.py
